# Racing-Game

./: CMakeLists.txt  README.md
assets/shaders/: default.f.glsl  final.f.glsl  framebuffer.v.glsl  quad.v.glsl
lib/glad/include/glad/: glad.h
src/: assets.cpp  assets.h  config.h  engine.cpp  engine.h  game.cpp  game.h  glw.cpp  glw.h  input.cpp  input.h  main.cpp  render.cpp  render.h  types.h  util.cpp  util.h  window.cpp  window.h
